# SAC_BE

./: .coverage  .env  .gitignore  API CHECCKS.txt  API_CHECKS.txt  CreateNewPolicy.js  Data_type_Validation_SAC.xlsx  EDW_AGENT_LIST(Sheet1) (1).csv  HcmUserList.js  KEY_VAULT_SECRETS.txt  RE Custom Domain Name for SAC Application  Support Required.msg  README.md  ReportRecipientList.js  SAC VBA DOC.xlsx  SacCreateNewAccount.js  app.py  azure-pipelines.yml  check.txt  db.py  load_edw_agent_list.py  pyproject.toml  readme.md  requirements.txt
api/: auth.py  dropdowns.py
api/sac/: claim_review_distribution.py  claim_review_frequency.py  deduct_bill_distribution.py  deduct_bill_frequency.py  hcm_users.py  loss_run_distribution.py  loss_run_frequency.py  sac_account.py  sac_affiliates.py  sac_policies.py  search_sac_account.py
core/: API_CHECKS.txt  config.py  date_utils.py  db_helpers.py  encrypt.py  jwt_handler.py  key_vault.py  logging_config.py
core/models/: __init__.py  auth.py  claim_review_distribution.py  claim_review_frequency.py  deduct_bill_distribution.py  deduct_bill_frequency.py  distribution.py  frequency.py  hcm_users.py  loss_run_distribution.py  loss_run_frequency.py  sac_account.py  sac_affiliates.py  sac_policies.py
services/: account_validation.py  auth_service.py  claim_review_distribution_service.py  claim_review_frequency_service.py  deduct_bill_distribution_service.py  dropdowns_service.py  hcm_users_service.py  policy_validation.py  sac_account_service.py  sac_policies_service.py  search_sac_account_service.py
services/sac/: account_validation.py  claim_review_distribution_service.py  claim_review_frequency_service.py  deduct_bill_distribution_service.py  deduct_bill_frequency_service.py  hcm_users_service.py  loss_run_distribution_service.py  loss_run_frequency_service.py  policy_validation.py  recipient_validations.py  sac_account_service.py  sac_affiliates_service.py  sac_policies_service.py  search_sac_account_service.py
tests/: conftest.py  test_app.py  test_db.py
tests/api/: test_auth.py  test_dropdowns.py
tests/core/: test_db_helpers.py  test_encrypt.py  test_jwt_handler.py  test_logging_config.py  test_models.py
(+25 files in other folders)
