[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sac-be"
version = "0.1.0"
description = "Backend services for SAC account provisioning"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.116.1",
    "pandas==2.3.2",
    "PyJWT==2.10.1",
    "pyodbc==5.2.0",
    "uvicorn==0.22.0",
    "bcrypt==4.2.0",
    "email-validator==2.1.1",
    "python-dotenv==1.0.1",
    "azure-identity==1.17.1",
    "azure-keyvault-secrets==4.9.0"
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "ruff==0.6.9"
]
test = [
    "pytest==8.3.3",
    "httpx==0.27.2",
    "pytest-cov==7.0.0"
]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
skip-string-normalization = false

[tool.ruff]
target-version = "py312"
respect-gitignore = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "UP"  # pyupgrade
]
extend-ignore = [
    "E501"  # rely on Black for long lines
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
